--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -11,176 +11,160 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.ygb.turismotepic.Registro">
 
-    <TextView
-        android:text="@string/title_registro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:id="@+id/tvTitleRegistro"
-        android:textStyle="normal|bold"
-        android:textSize="18sp"
-        android:textColor="@android:color/background_dark" />
+        android:layout_alignParentStart="true">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Name"
-        android:ems="10"
-        android:layout_below="@+id/textView4"
-        android:id="@+id/editText"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:text="@string/title_pass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
-        android:layout_marginTop="19dp"
-        android:id="@+id/textView5" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Name"
-        android:ems="10"
-        android:layout_below="@+id/textView5"
-        android:layout_alignStart="@+id/textView5"
-        android:id="@+id/editText2"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:text="@string/title_sexo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView6"
-        android:layout_below="@+id/editText2"
-        android:layout_alignStart="@+id/editText2"
-        android:layout_marginTop="21dp" />
-
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView6"
-        android:layout_alignStart="@+id/textView6"
-        android:id="@+id/spinner" />
-
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView7"
-        android:layout_alignStart="@+id/textView7"
-        android:layout_marginTop="11dp"
-        android:id="@+id/spinner2" />
-
-    <TextView
-        android:text="@string/title_origen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView11"
-        android:layout_marginTop="26dp"
-        android:layout_below="@+id/spinner2"
-        android:layout_alignStart="@+id/spinner2" />
-
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner3"
-        android:layout_below="@+id/textView11"
-        android:layout_alignStart="@+id/textView11" />
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView8"
-        android:weightSum="1"
-        android:layout_alignStart="@+id/textView8">
+        <TextView
+            android:text="@string/title_registro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvTitleRegistro"
+            android:textStyle="normal|bold"
+            android:textSize="18sp"
+            android:textColor="@android:color/background_dark"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="date"
+            android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/editText6"
-            android:layout_below="@+id/textView8"
-            android:layout_alignStart="@+id/textView8"
-            android:layout_weight="0.69" />
+            android:layout_below="@+id/tvTitleRegistro"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="31dp"
+            android:id="@+id/editText"
+            android:layout_alignParentEnd="true" />
 
-        <ImageButton
+        <EditText
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            app:srcCompat="@android:drawable/ic_menu_today"
-            android:id="@+id/imageButton"
-            android:layout_alignTop="@+id/editText6"
-            android:layout_toEndOf="@+id/editText6"
-            android:layout_weight="0.22" />
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/editText2"
+            android:layout_below="@+id/tvTitlePass"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true" />
 
-    </LinearLayout>
+        <TextView
+            android:text="@string/title_sexo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="21dp"
+            android:id="@+id/tvTitleSexo"
+            android:layout_below="@+id/editText2"
+            android:layout_alignParentStart="true" />
 
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/button2"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/button3" />
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner"
+            android:layout_below="@+id/tvTitleSexo"
+            android:layout_alignParentStart="true" />
 
-    <TextView
-        android:text="@string/title_usuario"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/tvTitleRegistro"
-        android:layout_alignParentStart="true" />
+        <TextView
+            android:text="@string/title_edad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvTitleCumpleaños"
+            android:layout_marginTop="18dp"
+            android:layout_below="@+id/spinner"
+            android:layout_alignParentStart="true" />
 
-    <TextView
-        android:text="@string/title_motivo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:id="@+id/textView7"
-        android:layout_below="@+id/spinner"
-        android:layout_alignParentStart="true" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvTitleCumpleaños"
+            android:layout_alignParentStart="true">
 
-    <TextView
-        android:text="@string/title_otro_origen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView13"
-        android:layout_below="@+id/spinner3"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="11dp" />
+            <EditText
+                android:layout_width="305dp"
+                android:layout_height="wrap_content"
+                android:inputType="date"
+                android:ems="10"
+                android:id="@+id/editText3" />
 
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView13"
-        android:layout_alignParentStart="true"
-        android:id="@+id/spinner4" />
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="42dp"
+                app:srcCompat="@android:drawable/ic_menu_today"
+                android:id="@+id/imageButton" />
 
-    <TextView
-        android:text="@string/title_edad"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView8"
-        android:layout_marginTop="12dp"
-        android:layout_weight="0.69"
-        android:layout_below="@+id/spinner4"
-        android:layout_alignParentStart="true" />
+        </LinearLayout>
 
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button2"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout4" />
+        <TextView
+            android:text="@string/title_origen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="207dp"
+            android:id="@+id/tvTitleOrigen" />
+
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner2"
+            android:layout_alignTop="@+id/tvTitleOrigen"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="16dp" />
+
+        <TextView
+            android:text="@string/title_otro_origen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="148dp"
+            android:id="@+id/tvTitleOtroOrigen" />
+
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner3"
+            android:layout_marginTop="17dp"
+            android:layout_alignTop="@+id/tvTitleOtroOrigen"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="@string/title_pass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp"
+            android:id="@+id/tvTitlePass"
+            android:layout_below="@+id/editText"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="@string/title_usuario"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp"
+            android:id="@+id/tvTitleUsuario"
+            android:layout_below="@+id/tvTitleRegistro"
+            android:layout_alignParentStart="true" />
+
+        <Button
+            android:text="@string/btn_guardar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="22dp"
+            android:id="@+id/btnGuardarReg"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true" />
+
+        <Button
+            android:text="@string/btn_cancelar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnCancelarReg"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@+id/tvTitleCumpleaños" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
