--- a/app/src/main/res/layout/encuensta_layout.xml
+++ b/app/src/main/res/layout/encuensta_layout.xml
@@ -541,7 +541,7 @@
         android:id="@+id/btnCancelarEnc" />
 
     <Button
-        android:text="@string/btn_guard"
+        android:text="@string/btn_guardar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnGuardarEnc"
