--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -85,14 +85,14 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
+        android:src="@android:drawable/ic_menu_close_clear_cancel"
         android:id="@+id/ivBtnCerrar"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true" />
 
     <ImageView
         android:layout_width="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
+        android:src="@mipmap/ic_launcher"
         android:id="@+id/ivLogo"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivBtnCerrar"
