--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -31,20 +31,9 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:layout_below="@+id/tvTitleRegistro"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="31dp"
-            android:id="@+id/editText"
-            android:layout_alignParentEnd="true" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/editText2"
+            android:id="@+id/etPass"
             android:layout_below="@+id/tvTitlePass"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true" />
@@ -55,15 +44,30 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="21dp"
             android:id="@+id/tvTitleSexo"
-            android:layout_below="@+id/editText2"
+            android:layout_below="@+id/etPass"
             android:layout_alignParentStart="true" />
 
-        <Spinner
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/spinner"
             android:layout_below="@+id/tvTitleSexo"
-            android:layout_alignParentStart="true" />
+            android:id="@+id/lineaSexo">
+
+            <RadioButton
+                android:text="@string/title_mujer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/radioButton2"
+                android:layout_weight="1" />
+
+            <RadioButton
+                android:text="@string/title_hombre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/radioButton"
+                android:layout_weight="1" />
+        </LinearLayout>
 
         <TextView
             android:text="@string/title_edad"
@@ -71,7 +75,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/tvTitleCumpleaños"
             android:layout_marginTop="18dp"
-            android:layout_below="@+id/spinner"
+            android:layout_below="@+id/lineaSexo"
             android:layout_alignParentStart="true" />
 
         <LinearLayout
@@ -79,20 +83,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvTitleCumpleaños"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:id="@+id/lineaEdad">
 
             <EditText
                 android:layout_width="305dp"
                 android:layout_height="wrap_content"
                 android:inputType="date"
                 android:ems="10"
-                android:id="@+id/editText3" />
+                android:id="@+id/etFecha" />
 
             <ImageButton
                 android:layout_width="match_parent"
                 android:layout_height="42dp"
-                app:srcCompat="@android:drawable/ic_menu_today"
-                android:id="@+id/imageButton" />
+                android:src="@android:drawable/ic_menu_today"
+                android:id="@+id/ibtnCalendario" />
 
         </LinearLayout>
 
@@ -100,32 +105,22 @@
             android:text="@string/title_origen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="207dp"
+            android:layout_below="@+id/lineaEdad"
             android:id="@+id/tvTitleOrigen" />
 
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/spinner2"
+            android:id="@+id/spOrigen"
             android:layout_alignTop="@+id/tvTitleOrigen"
             android:layout_alignParentStart="true"
             android:layout_marginTop="16dp" />
 
-        <TextView
-            android:text="@string/title_otro_origen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="148dp"
-            android:id="@+id/tvTitleOtroOrigen" />
-
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/spinner3"
+            android:id="@+id/spOtroOrigen"
             android:layout_marginTop="17dp"
             android:layout_alignTop="@+id/tvTitleOtroOrigen"
             android:layout_alignParentStart="true" />
@@ -136,7 +131,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="13dp"
             android:id="@+id/tvTitlePass"
-            android:layout_below="@+id/editText"
+            android:layout_below="@+id/etUsuario"
             android:layout_alignParentStart="true" />
 
         <TextView
@@ -164,6 +159,25 @@
             android:id="@+id/btnCancelarReg"
             android:layout_alignParentBottom="true"
             android:layout_toEndOf="@+id/tvTitleCumpleaños" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/etUsuario"
+            android:layout_below="@+id/tvTitleUsuario"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true" />
+
+        <TextView
+            android:text="@string/title_otro_origen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvTitleOtroOrigen"
+            android:layout_below="@+id/spOrigen"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="21dp" />
 
     </RelativeLayout>
 
