--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -11,174 +11,231 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.ygb.turismotepic.Registro">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <TextView
+        android:text="@string/title_registro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvTitleRegistro"
+        android:textStyle="normal|bold"
+        android:textSize="18sp"
+        android:textColor="@android:color/background_dark"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_centerHorizontal="true" />
 
-        <TextView
-            android:text="@string/title_registro"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvTitleRegistro"
-            android:textStyle="normal|bold"
-            android:textSize="18sp"
-            android:textColor="@android:color/background_dark"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/etPass"
-            android:layout_below="@+id/tvTitlePass"
+            android:orientation="vertical"
             android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true" />
-
-        <TextView
-            android:text="@string/title_sexo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginTop="21dp"
-            android:id="@+id/tvTitleSexo"
-            android:layout_below="@+id/etPass"
-            android:layout_alignParentStart="true" />
+            android:weightSum="1">
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvTitleSexo"
-            android:id="@+id/lineaSexo">
-
-            <RadioButton
-                android:text="@string/title_mujer"
+            <TextView
+                android:text="@string/title_sexo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/radioButton2"
-                android:layout_weight="1" />
+                android:layout_marginTop="21dp"
+                android:id="@+id/tvTitleSexo"
+                android:layout_below="@+id/etPass"
+                android:layout_alignParentStart="true"
+                android:textStyle="normal|bold" />
 
-            <RadioButton
-                android:text="@string/title_hombre"
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal"
+                android:id="@+id/RGB">
+
+                <RadioButton
+                    android:text="@string/title_mujer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rbMujer" />
+
+                <RadioButton
+                    android:text="@string/title_hombre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rbHombre"
+                    android:gravity="center_vertical|center_horizontal" />
+            </RadioGroup>
+
+            <TextView
+                android:text="@string/title_edad"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/radioButton"
-                android:layout_weight="1" />
-        </LinearLayout>
+                android:id="@+id/tvTitleCumpleaños"
+                android:layout_marginTop="18dp"
+                android:layout_below="@+id/lineaSexo"
+                android:layout_alignParentStart="true"
+                android:textStyle="normal|bold" />
 
-        <TextView
-            android:text="@string/title_edad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvTitleCumpleaños"
-            android:layout_marginTop="18dp"
-            android:layout_below="@+id/lineaSexo"
-            android:layout_alignParentStart="true" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvTitleCumpleaños"
+                android:layout_alignParentStart="true"
+                android:id="@+id/lineaEdad">
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvTitleCumpleaños"
-            android:layout_alignParentStart="true"
-            android:id="@+id/lineaEdad">
+                <EditText
+                    android:layout_width="305dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="date"
+                    android:ems="10"
+                    android:id="@+id/etFecha" />
+
+                <ImageButton
+                    android:layout_width="match_parent"
+                    android:layout_height="42dp"
+                    android:src="@android:drawable/ic_menu_today"
+                    android:id="@+id/ibtnCalendario" />
+
+            </LinearLayout>
+
+            <TextView
+                android:text="@string/title_usuario"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="13dp"
+                android:id="@+id/tvTitleUsuario"
+                android:layout_below="@+id/tvTitleRegistro"
+                android:layout_alignParentStart="true"
+                android:textStyle="normal|bold" />
 
             <EditText
-                android:layout_width="305dp"
+                android:layout_width="385dp"
                 android:layout_height="wrap_content"
-                android:inputType="date"
+                android:inputType="textPersonName"
                 android:ems="10"
-                android:id="@+id/etFecha" />
+                android:id="@+id/etUsuario"
+                android:layout_below="@+id/tvTitleUsuario"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true" />
 
-            <ImageButton
+            <TextView
+                android:text="@string/title_pass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="13dp"
+                android:id="@+id/tvTitlePass"
+                android:layout_below="@+id/etUsuario"
+                android:layout_alignParentStart="true"
+                android:textStyle="normal|bold" />
+
+            <EditText
                 android:layout_width="match_parent"
-                android:layout_height="42dp"
-                android:src="@android:drawable/ic_menu_today"
-                android:id="@+id/ibtnCalendario" />
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:id="@+id/etPass"
+                android:layout_below="@+id/tvTitlePass"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true" />
+
+            <TextView
+                android:text="@string/title_otro_origen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvTitleOtroOrigen"
+                android:layout_below="@+id/spOrigen"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="21dp"
+                android:textStyle="normal|bold" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/spOtroOrigen"
+                android:layout_below="@+id/tvTitleOtroOrigen"
+                android:layout_alignParentStart="true"
+                android:visibility="invisible" />
+
+            <TextView
+                android:text="@string/title_origen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvTitleOrigen"
+                android:layout_below="@+id/lineaEdad"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="21dp"
+                android:textStyle="normal|bold" />
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/spOrigen"
+                android:layout_alignTop="@+id/tvTitleOrigen"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="16dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvTitleMotivo"
+                android:layout_below="@+id/spOtroOrigen"
+                android:layout_marginTop="26dp"
+                android:text="@string/title_motivo"
+                android:textStyle="normal|bold" />
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/spMotivo"
+                android:layout_below="@+id/tvTitleMotivo"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:text="@string/title_acompañantes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:id="@+id/tvTitleAcompanantes"
+                android:paddingTop="21dp"
+                android:textStyle="normal|bold" />
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/spCompaneros"
+                android:layout_alignTop="@+id/tvTitleAcompanantes"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="17dp" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp">
+
+                <Button
+                    android:text="@string/btn_cancelar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnCancelarReg"
+                    android:layout_alignParentBottom="true"
+                    android:layout_toEndOf="@+id/tvTitleCumpleaños" />
+
+                <Button
+                    android:text="@string/btn_guardar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnGuardarReg"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_weight="1"
+                    android:layout_marginStart="20dp" />
+            </LinearLayout>
 
         </LinearLayout>
-
-        <TextView
-            android:text="@string/title_origen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/lineaEdad"
-            android:id="@+id/tvTitleOrigen" />
-
-        <Spinner
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/spOrigen"
-            android:layout_alignTop="@+id/tvTitleOrigen"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="16dp" />
-
-        <Spinner
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/spOtroOrigen"
-            android:layout_marginTop="17dp"
-            android:layout_alignTop="@+id/tvTitleOtroOrigen"
-            android:layout_alignParentStart="true" />
-
-        <TextView
-            android:text="@string/title_pass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="13dp"
-            android:id="@+id/tvTitlePass"
-            android:layout_below="@+id/etUsuario"
-            android:layout_alignParentStart="true" />
-
-        <TextView
-            android:text="@string/title_usuario"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="13dp"
-            android:id="@+id/tvTitleUsuario"
-            android:layout_below="@+id/tvTitleRegistro"
-            android:layout_alignParentStart="true" />
-
-        <Button
-            android:text="@string/btn_guardar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="22dp"
-            android:id="@+id/btnGuardarReg"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true" />
-
-        <Button
-            android:text="@string/btn_cancelar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnCancelarReg"
-            android:layout_alignParentBottom="true"
-            android:layout_toEndOf="@+id/tvTitleCumpleaños" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/etUsuario"
-            android:layout_below="@+id/tvTitleUsuario"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true" />
-
-        <TextView
-            android:text="@string/title_otro_origen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvTitleOtroOrigen"
-            android:layout_below="@+id/spOrigen"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="21dp" />
-
-    </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
