--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -89,13 +89,13 @@
                     android:layout_height="wrap_content"
                     android:inputType="date"
                     android:ems="10"
-                    android:id="@+id/etFecha" />
+                    android:id="@+id/etEdad" />
 
                 <ImageButton
                     android:layout_width="match_parent"
                     android:layout_height="42dp"
                     android:src="@android:drawable/ic_menu_today"
-                    android:id="@+id/ibtnCalendario" />
+                    android:id="@+id/ibtnEdad" />
 
             </LinearLayout>
 
