--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -24,7 +24,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="21dp"
                 android:id="@+id/tvTitleSexo"
-                android:layout_below="@+id/etPass"
+                android:layout_below="@+id/etPassLog"
                 android:layout_alignParentStart="true"
                 android:textStyle="normal|bold" />
 
@@ -114,7 +116,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:ems="10"
-                android:id="@+id/etUsuario"
+                android:id="@+id/etUsuarioLog"
                 android:layout_below="@+id/tvTitleUsuario"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true" />
@@ -125,37 +127,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="13dp"
                 android:id="@+id/tvTitlePass"
-                android:layout_below="@+id/etUsuario"
+                android:layout_below="@+id/etUsuarioLog"
                 android:layout_alignParentStart="true"
                 android:textStyle="normal|bold" />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
                 android:ems="10"
-                android:id="@+id/etPass"
+                android:id="@+id/etPassLog"
                 android:layout_below="@+id/tvTitlePass"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true" />
-
-            <TextView
-                android:text="@string/title_otro_origen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tvTitleOtroOrigen"
-                android:layout_below="@+id/spOrigen"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="21dp"
-                android:textStyle="normal|bold" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/spOtroOrigen"
-                android:layout_below="@+id/tvTitleOtroOrigen"
-                android:layout_alignParentStart="true"
-                android:visibility="invisible" />
 
             <TextView
                 android:text="@string/title_origen"
