--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,6 @@
 <resources>
-    <style name="AppTheme1" parent="@android:style/Theme.Holo.Light.NoActionBar">
-    </style>
 
+    <style name="AppTheme1" parent="@android:style/Theme.Holo.Light.NoActionBar"></style>
 
 
     <!-- Base application theme. -->
@@ -33,6 +32,7 @@
     <style name="FullscreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@color/black_overlay</item>
     </style>
+
     <style name="RRRegister" parent="Theme.AppCompat.Light">
         <item name="colorControlNormal">#ea5b0c</item>
         <item name="colorControlActivated">#ea5b0c</item>
