--- a/app/src/main/res/layout/activity_augmentedreality.xml
+++ b/app/src/main/res/layout/activity_augmentedreality.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.ygb.turismotepic.Augmentedreality">
+    tools:context="com.ut3.ehg.turismotepic.Augmentedreality">
 
 
     <com.wikitude.architect.ArchitectView
