--- a/app/src/main/res/layout/activity_encuesta.xml
+++ b/app/src/main/res/layout/activity_encuesta.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_encuesta"
@@ -8,7 +9,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.ygb.turismotepic.EncuestaActivity">
+    tools:context="com.ut3.ehg.turismotepic.EncuestaActivity">
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,6 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tp1preg1"
+            android:textColor="#000"
             android:gravity="center"
             android:text="@string/tpreg1"
             android:layout_marginBottom="5dp"
@@ -67,6 +71,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#000"
             android:text="@string/pregp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -110,6 +115,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/tp2preg2"
                 android:gravity="center"
+                android:textColor="#000"
                 android:text="@string/tpreg2"
                 android:layout_marginBottom="5dp"
                 />
@@ -119,6 +125,7 @@
                 android:text="@string/pregp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:textColor="#000"
                 android:gravity="center"
                 android:id="@+id/preg2"
                 android:layout_below="@id/tp2preg2"
@@ -159,6 +166,7 @@
                 android:id="@+id/tp2preg3"
                 android:gravity="center"
                 android:text="@string/tpreg3"
+                android:textColor="#000"
                 android:layout_marginBottom="5dp"
                 />
             <TextView
@@ -169,6 +177,7 @@
                 android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:id="@+id/preg3"
+                android:textColor="#000"
                 android:layout_below="@id/tp2preg3"
                 />
             <LinearLayout
@@ -206,6 +215,7 @@
                 android:id="@+id/tp3preg3"
                 android:gravity="center"
                 android:text="@string/tpreg4"
+                android:textColor="#000"
                 android:layout_marginBottom="5dp"
                 />
             <TextView
@@ -216,6 +226,7 @@
                 android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:id="@+id/preg4"
+                android:textColor="#000"
                 android:layout_below="@id/tp3preg3"
                 />
             <LinearLayout
@@ -252,6 +263,7 @@
                 android:id="@+id/tp5preg5"
                 android:gravity="center"
                 android:text="@string/tpreg5"
+                android:textColor="#000"
                 android:layout_marginBottom="5dp"
                 />
             <TextView
@@ -262,6 +274,7 @@
                 android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:id="@+id/preg5"
+                android:textColor="#000"
                 android:layout_below="@id/tp5preg5"
                 />
             <LinearLayout
@@ -305,3 +318,4 @@
     </ScrollView>
 
 </RelativeLayout>
+
