--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@mipmap/bottomf"
 
-    tools:context="com.example.ygb.turismotepic.Login">
+    tools:context="com.ut3.ehg.turismotepic.Login">
 
 
     <Button
