--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,6 +10,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.ygb.turismotepic.MainActivity"
+    tools:context="com.ut3.ehg.turismotepic.MainActivity"
     tools:showIn="@layout/app_bar_main">
 </RelativeLayout>
