--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_registro"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/fregistro"
+    android:background="@mipmap/fpoi"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -15,7 +15,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="92dp"
+        android:layout_below="@+id/rname"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true">
 
@@ -255,9 +255,9 @@
                 android:orientation="horizontal"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:layout_marginBottom="15dp"
-                android:layout_marginTop="15dp">
+                android:layout_height="40dp"
+                android:layout_marginBottom="40dp"
+                android:layout_marginTop="45dp">
 
                 <ImageButton
                     android:layout_width="wrap_content"
@@ -272,22 +272,26 @@
 
         </LinearLayout>
     </ScrollView>
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="90dp"
+    android:id="@+id/rname"
+    android:gravity="right|bottom"
+    android:background="#F29100">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_registro"
         android:textStyle="bold"
+        android:drawablePadding="8dp"
         android:textColor="#FFF"
+        android:layout_marginRight="100dp"
+        android:layout_marginBottom="5dp"
         android:textSize="18dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="10dp"
-        android:drawablePadding="6dp"
-        android:gravity="center_vertical"
-        android:drawableLeft="@mipmap/enc"
-        android:layout_alignTop="@+id/rico"
-        android:layout_toStartOf="@+id/rico" />
 
+        android:drawableLeft="@mipmap/enc"
+        />
+    </LinearLayout>
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -297,5 +301,6 @@
         android:layout_marginTop="58dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true" />
+
 
 </RelativeLayout>
