--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -274,22 +274,17 @@
     </ScrollView>
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="55dp"
     android:id="@+id/rname"
-    android:gravity="right|bottom"
+    android:gravity="center"
     android:background="#F29100">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_registro"
         android:textStyle="bold"
-        android:drawablePadding="8dp"
         android:textColor="#FFF"
-        android:layout_marginRight="100dp"
-        android:layout_marginBottom="5dp"
         android:textSize="18dp"
-
-        android:drawableLeft="@mipmap/enc"
         />
     </LinearLayout>
     <ImageView
@@ -298,7 +293,7 @@
         android:src="@mipmap/rico"
         android:layout_marginEnd="22dp"
         android:id="@+id/rico"
-        android:layout_marginTop="58dp"
+        android:layout_marginTop="30dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true" />
 
