--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -50,7 +50,7 @@
                 android:layout_marginBottom="3dp"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ruta"/>
+                android:src="@mipmap/ico_distancia"/>
             <TextView
                 android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
@@ -73,7 +73,7 @@
             android:layout_marginBottom="3dp"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:src="@drawable/clock"/>
+            android:src="@mipmap/ico_tiempo"/>
         <TextView
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
